( r251737 ) media/remoteplayback-prompt.html is a flakey timeout https://bugs.webkit.org/show_bug.cgi?id=204362 <rdar://problem/57327870>

Reviewed by Jer Noble.

Source/WebCore:

No new tests, this fixes a flakey test.

* platform/mock/MediaPlaybackTargetPickerMock.cpp:
(WebCore::MediaPlaybackTargetPickerMock::MediaPlaybackTargetPickerMock):
(WebCore::MediaPlaybackTargetPickerMock::showPlaybackTargetPicker):
(WebCore::MediaPlaybackTargetPickerMock::startingMonitoringPlaybackTargets):
(WebCore::MediaPlaybackTargetPickerMock::setState):
(WebCore::MediaPlaybackTargetPickerMock::timerFired): Deleted.
* platform/mock/MediaPlaybackTargetPickerMock.h:

LayoutTests:

* media/media-source/only-bcp47-language-tags-accepted-as-valid-expected.txt:
* media/remoteplayback-prompt.html: Update to make debugging timeouts easier.
* media/video-test.js:
(waitForEventWithTimeout):


Canonical link: https://commits.webkit.org/217772@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252793 268f45cc-cd09-0410-ab3c-d52691b4dbfc